files/script/test_all/parse_error/string/test_string_error1.ll
def main()
{
    var string = "hello
}
#script("script/test_all/parse_error/string/test_string_error1.ll")
